--- a/client/src/assets/scss/section/_detail.scss
+++ b/client/src/assets/scss/section/_detail.scss
@@ -19,20 +19,8 @@
         .auth {
             font-size: 16px;
             color: rgb(143, 149, 171);
-            position: relative;
-            padding-left: 26px;
             padding-top: 1px;
-
-            &::before {
-                content: '';
-                width: 20px;
-                height: 20px;
-                background-color: rgb(100, 70, 255);
-                position: absolute;
-                left: 0;
-                top: 0;
-                border-radius: 50%;
-            }
+            margin-left: 10px;
         }
     }
 
